# vault_shadow_rotomagic

./: .gitignore  Cargo.toml
assets/: vault_shadow_rotomagic.env  vault_shadow_rotomagic.service  vault_shadow_rotomagic.timer
src/: main.rs
