[package]
name = "vault_shadow_rotomagic"
version = "0.1.0"
edition = "2021"
authors = ["Thorhallur Sverrisson <toti@toti.is>"]
description = "Rotates a password directly in the shadow file, an stores the new password in vault"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["env", "cargo", "derive"] }
color-eyre = "0.6"
gethostname = "0.4"
pwhash = "1"
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
vaultrs = "0.7"

[[package.metadata.generate-rpm.assets]]
source = "target/release/vault_shadow_rotomagic"
dest = "/usr/local/bin/vault_shadow_rotomagic"
mode = "0555"
