[package]
name = "vault_shadow_rotomagic"
version = "2.0.0"
edition = "2021"
authors = ["Thorhallur Sverrisson <toti@toti.is>"]
license = "BSD"
description = "Rotates a password directly in the shadow file, an stores the new password in vault"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["env", "cargo", "derive"] }
color-eyre = "0.6"
gethostname = "0.4"
isl_passwd_generator = { git = "https://gitlab.rb.is/rb747/isl_passwd_generator.git", version = "2.0.0" }
pwhash = "1"
rand = "0.8"
secrecy = "0.8.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
vaultrs = "0.7"

[package.metadata.release]
publish = false

[[package.metadata.generate-rpm.assets]]
source = "target/release/vault_shadow_rotomagic"
dest = "/usr/local/bin/vault_shadow_rotomagic"
mode = "0555"

[[package.metadata.generate-rpm.assets]]
source = "assets/vault_shadow_rotomagic.env"
dest = "/etc/sysconfig/vault_shadow_rotomagic"
mode = "0444"

[[package.metadata.generate-rpm.assets]]
source = "assets/vault_shadow_rotomagic.service"
dest = "/usr/lib/systemd/system/vault-shadow-rotomagic.service"
mode = "0444"

[[package.metadata.generate-rpm.assets]]
source = "assets/vault_shadow_rotomagic.timer"
dest = "/usr/lib/systemd/system/vault-shadow-rotomagic.timer"
mode = "0444"
